--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:orientation="vertical"
         tools:context=".MainActivity">
 
-        <TextView android:text="@string/hello_world"
+        <EditText android:hint="@string/hello_world"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"/>
@@ -28,20 +28,22 @@
 
         <TextView android:text="@string/hello_world"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"/>
 
             <TextView
                 android:text="Hello"
                 android:layout_width="0dp"
                 android:layout_weight="4"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent"/>
 
             <TextView
-                android:text="Hello"
+                android:text="<--"
+                android:textSize="50sp"
+                android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
@@ -56,28 +58,36 @@
         android:orientation="horizontal"
         tools:context=".MainActivity">
 
-        <TextView android:text="@string/hello_world"
+        <TextView android:text="1"
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"/>
 
         <TextView
-            android:text="Hello"
+            android:text="2"
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
         <TextView
-            android:text="Hello"
+            android:text="3"
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
         <TextView
-            android:text="Hello"
+            android:text="+"
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
 
     </LinearLayout>
@@ -90,28 +100,36 @@
         android:orientation="horizontal"
         tools:context=".MainActivity">
 
-        <TextView android:text="@string/hello_world"
+        <TextView android:text="4"
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"/>
 
         <TextView
-            android:text="Hello"
+            android:text="5"
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
         <TextView
-            android:text="Hello"
+            android:text="6"
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
         <TextView
-            android:text="Hello"
+            android:text="-"
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
 
     </LinearLayout>
@@ -124,28 +142,36 @@
         android:orientation="horizontal"
         tools:context=".MainActivity">
 
-        <TextView android:text="@string/hello_world"
+        <TextView android:text="7"
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"/>
 
         <TextView
-            android:text="Hello"
+            android:text="8"
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
         <TextView
-            android:text="Hello"
+            android:text="9"
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
         <TextView
-            android:text="Hello"
+            android:text="/"
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
 
     </LinearLayout>
@@ -158,28 +184,36 @@
         android:orientation="horizontal"
         tools:context=".MainActivity">
 
-        <TextView android:text="@string/hello_world"
+        <TextView android:text="."
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"/>
 
         <TextView
-            android:text="Hello"
+            android:text="0"
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
         <TextView
-            android:text="Hello"
+            android:text="="
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
         <TextView
-            android:text="Hello"
+            android:text="*"
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
 
     </LinearLayout>
