--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         tools:context=".MainActivity">
 
         <EditText android:hint="@string/hello_world"
+            android:gravity="right|center"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"/>
@@ -33,6 +34,7 @@
 
             <TextView
                 android:text="Hello"
+                android:gravity="right|center"
                 android:layout_width="0dp"
                 android:layout_weight="4"
                 android:layout_height="match_parent"/>
