--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,9 @@
         android:orientation="vertical"
         tools:context=".MainActivity">
 
-        <EditText android:hint="@string/hello_world"
+        <EditText
+            android:id="@+id/text_edit"
+            android:hint="0"
             android:gravity="right|center"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -27,12 +29,15 @@
             android:orientation="horizontal"
             tools:context=".MainActivity">
 
-        <TextView android:text="@string/hello_world"
+        <TextView
+            android:id="@+id/show_operator"
+            android:text="@string/hello_world"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"/>
 
             <TextView
+                android:id="@+id/show_prev"
                 android:text="Hello"
                 android:gravity="right|center"
                 android:layout_width="0dp"
@@ -40,6 +45,7 @@
                 android:layout_height="match_parent"/>
 
             <TextView
+                android:onClick="onClickBackspace"
                 android:text="B"
                 android:textSize="50sp"
                 android:gravity="center"
@@ -60,7 +66,9 @@
         android:orientation="horizontal"
         tools:context=".MainActivity">
 
-        <TextView android:text="1"
+        <TextView
+            android:onClick="onClickOne"
+            android:text="1"
             android:textSize="50sp"
             android:gravity="center"
             android:layout_width="0dp"
@@ -68,6 +76,7 @@
             android:layout_weight="1"/>
 
         <TextView
+            android:onClick="onClickTwo"
             android:text="2"
             android:textSize="50sp"
             android:gravity="center"
@@ -76,6 +85,7 @@
             android:layout_height="match_parent" />
 
         <TextView
+            android:onClick="onClickThree"
             android:text="3"
             android:textSize="50sp"
             android:gravity="center"
@@ -84,6 +94,7 @@
             android:layout_height="match_parent" />
 
         <TextView
+            android:onClick="onClickAdd"
             android:text="+"
             android:textSize="50sp"
             android:gravity="center"
@@ -102,7 +113,9 @@
         android:orientation="horizontal"
         tools:context=".MainActivity">
 
-        <TextView android:text="4"
+        <TextView
+            android:onClick="onClickFour"
+            android:text="4"
             android:textSize="50sp"
             android:gravity="center"
             android:layout_width="0dp"
@@ -110,6 +123,7 @@
             android:layout_weight="1"/>
 
         <TextView
+            android:onClick="onClickFive"
             android:text="5"
             android:textSize="50sp"
             android:gravity="center"
@@ -118,6 +132,7 @@
             android:layout_height="match_parent" />
 
         <TextView
+            android:onClick="onClickSix"
             android:text="6"
             android:textSize="50sp"
             android:gravity="center"
@@ -126,6 +141,7 @@
             android:layout_height="match_parent" />
 
         <TextView
+            android:onClick="onClickSubtract"
             android:text="-"
             android:textSize="50sp"
             android:gravity="center"
@@ -144,7 +160,9 @@
         android:orientation="horizontal"
         tools:context=".MainActivity">
 
-        <TextView android:text="7"
+        <TextView
+            android:onClick="onClickSeven"
+            android:text="7"
             android:textSize="50sp"
             android:gravity="center"
             android:layout_width="0dp"
@@ -152,6 +170,7 @@
             android:layout_weight="1"/>
 
         <TextView
+            android:onClick="onClickEight"
             android:text="8"
             android:textSize="50sp"
             android:gravity="center"
@@ -160,6 +179,7 @@
             android:layout_height="match_parent" />
 
         <TextView
+            android:onClick="Nine"
             android:text="9"
             android:textSize="50sp"
             android:gravity="center"
@@ -168,6 +188,7 @@
             android:layout_height="match_parent" />
 
         <TextView
+            android:onClick="onClickDivide"
             android:text="/"
             android:textSize="50sp"
             android:gravity="center"
@@ -186,7 +207,9 @@
         android:orientation="horizontal"
         tools:context=".MainActivity">
 
-        <TextView android:text="."
+        <TextView
+            android:onClick="onClickDot"
+            android:text="."
             android:textSize="50sp"
             android:gravity="center"
             android:layout_width="0dp"
@@ -194,6 +217,7 @@
             android:layout_weight="1"/>
 
         <TextView
+            android:onClick="onClickZero"
             android:text="0"
             android:textSize="50sp"
             android:gravity="center"
@@ -202,6 +226,7 @@
             android:layout_height="match_parent" />
 
         <TextView
+            android:onClick="onClickEqual"
             android:text="="
             android:textSize="50sp"
             android:gravity="center"
@@ -210,6 +235,7 @@
             android:layout_height="match_parent" />
 
         <TextView
+            android:onClick="onClickMultiply"
             android:text="*"
             android:textSize="50sp"
             android:gravity="center"
