--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#151514"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -14,6 +15,7 @@
 
         <TextView
             android:id="@+id/show_prev"
+            android:textColor="#12ffff"
             android:hint="0"
             android:textSize="40dp"
             android:gravity="right|center"
@@ -32,14 +34,18 @@
 
         <TextView
             android:id="@+id/show_operator"
-            android:text="@string/hello_world"
+            android:textColor="#12ffff"
+            android:textSize="50sp"
+            android:gravity="center"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/text_edit"
-                android:text="Hello"
+                android:textColor="#12ffff"
+                android:hint="0"
+                android:textSize="40sp"
                 android:gravity="right|center"
                 android:layout_width="0dp"
                 android:layout_weight="4"
@@ -47,8 +53,9 @@
 
             <TextView
                 android:onClick="onClickBackspace"
-                android:text="B"
-                android:textSize="50sp"
+                android:textColor="#474cff"
+                android:text="C"
+                android:textSize="40sp"
                 android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_weight="1"
@@ -69,6 +76,7 @@
 
         <TextView
             android:onClick="onClickOne"
+            android:textColor="#474cff"
             android:text="1"
             android:textSize="50sp"
             android:gravity="center"
@@ -78,6 +86,7 @@
 
         <TextView
             android:onClick="onClickTwo"
+            android:textColor="#474cff"
             android:text="2"
             android:textSize="50sp"
             android:gravity="center"
@@ -87,6 +96,7 @@
 
         <TextView
             android:onClick="onClickThree"
+            android:textColor="#474cff"
             android:text="3"
             android:textSize="50sp"
             android:gravity="center"
@@ -96,6 +106,7 @@
 
         <TextView
             android:onClick="onClickAdd"
+            android:textColor="#474cff"
             android:text="+"
             android:textSize="50sp"
             android:gravity="center"
@@ -116,6 +127,7 @@
 
         <TextView
             android:onClick="onClickFour"
+            android:textColor="#474cff"
             android:text="4"
             android:textSize="50sp"
             android:gravity="center"
@@ -125,6 +137,7 @@
 
         <TextView
             android:onClick="onClickFive"
+            android:textColor="#474cff"
             android:text="5"
             android:textSize="50sp"
             android:gravity="center"
@@ -134,6 +147,7 @@
 
         <TextView
             android:onClick="onClickSix"
+            android:textColor="#474cff"
             android:text="6"
             android:textSize="50sp"
             android:gravity="center"
@@ -143,6 +157,7 @@
 
         <TextView
             android:onClick="onClickSubtract"
+            android:textColor="#474cff"
             android:text="-"
             android:textSize="50sp"
             android:gravity="center"
@@ -163,6 +178,7 @@
 
         <TextView
             android:onClick="onClickSeven"
+            android:textColor="#474cff"
             android:text="7"
             android:textSize="50sp"
             android:gravity="center"
@@ -172,6 +188,7 @@
 
         <TextView
             android:onClick="onClickEight"
+            android:textColor="#474cff"
             android:text="8"
             android:textSize="50sp"
             android:gravity="center"
@@ -180,7 +197,8 @@
             android:layout_height="match_parent" />
 
         <TextView
-            android:onClick="Nine"
+            android:onClick="onClickNine"
+            android:textColor="#474cff"
             android:text="9"
             android:textSize="50sp"
             android:gravity="center"
@@ -190,6 +208,7 @@
 
         <TextView
             android:onClick="onClickDivide"
+            android:textColor="#474cff"
             android:text="/"
             android:textSize="50sp"
             android:gravity="center"
@@ -210,6 +229,7 @@
 
         <TextView
             android:onClick="onClickDot"
+            android:textColor="#474cff"
             android:text="."
             android:textSize="50sp"
             android:gravity="center"
@@ -219,6 +239,7 @@
 
         <TextView
             android:onClick="onClickZero"
+            android:textColor="#474cff"
             android:text="0"
             android:textSize="50sp"
             android:gravity="center"
@@ -228,6 +249,7 @@
 
         <TextView
             android:onClick="onClickEqual"
+            android:textColor="#474cff"
             android:text="="
             android:textSize="50sp"
             android:gravity="center"
@@ -237,6 +259,7 @@
 
         <TextView
             android:onClick="onClickMultiply"
+            android:textColor="#474cff"
             android:text="*"
             android:textSize="50sp"
             android:gravity="center"
